--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
                    class="layui-input admin-input">
         </div>
         <div align="center">
-            <button class="layui-btn admin-button" style="margin: auto" type="button" onclick="login()">登陆</button>
+            <button class="layui-btn admin-button" style="margin: auto" type="button" onclick="login()" language="login">登陆</button>
         </div>
     </div>
 </form>
