--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@
 
             // center.position.set()
             if (global.clear_data) {
-                let center = container.children[0];
+                // let center = container.children[0];
                 container.removeChildren()
                 backpack_container.removeChildren()
-                container.addChild(center)
+                // container.addChild(center)
                 player_list = {}
                 monster_list = {}
                 item_list = {}
