--- a/index.html
+++ b/index.html
@@ -490,8 +490,13 @@
                             || (current_map['@type'].indexOf("BLACK") + 1)
                             || (current_map['@type'].indexOf("RED") + 1)
                             || (!current_map['@displayname']))) {
-                            let temp_audio = new Audio(config['audio_path']);
                             item['tiped'] = true;
+                        }
+                        if (current_map['@type'].indexOf("TUNNEL_BLACK") + 1) {
+                            item['tiped'] = true;
+                        }
+                        if (item['tiped']) {
+                            let temp_audio = new Audio(config['audio_path']);
                             temp_audio.play().then(() => {
                                 console.log("tip player")
                             }).catch((e) => {
@@ -537,7 +542,7 @@
                         temp_img.scale.y = 1 / app.stage.scale.y
                     } else {
                         if (!item['position']) continue
-                        if ((item['club'] !== "" && config['club'] === item['club']) || (item['union'] !== "" && config['union'] === item['union'])) {
+                        if ((item['club'] !== "" && config['club'].toLowerCase() === item['club'].toLowerCase()) || (item['union'] !== "" && config['union'].toLowerCase() === item['union'].toLowerCase())) {
                             if (globalThis.white_player_list.indexOf(item['name']) === -1) {
                                 globalThis.white_player_list.push(item['name'])
                             }
