--- a/index.html
+++ b/index.html
@@ -438,10 +438,28 @@
                 app.renderer.background.alpha = 1;
             }
             globalThis.config = JSON.parse(localStorage.getItem("config"));
+            let tiped = false;
+            if (config['tip_for_player_sound']) {
+                if (current_map['@rareresourcedistribution'] !== "DEFAULT" && (
+                    (current_map['@rareresourcedistribution'].indexOf("RED") + 1)
+                    || (current_map['@rareresourcedistribution'].indexOf("OUT") + 1)
+                    || (current_map['@type'].indexOf("BLACK") + 1)
+                    || (current_map['@type'].indexOf("RED") + 1)
+                    || (!current_map['@displayname']))) {
+                    tiped = true;
+                }
+                if (current_map['@type'].indexOf("TUNNEL_BLACK") + 1) {
+                    tiped = true;
+                }
+                if (current_map['@id'] === "MIST_") {
+                    tiped = true;
+                }
+            }
             let temp_world_text = app.stage.getChildByName("map_info");
             temp_world_text.text = `${lan_data['current_map']}:${current_map['@displayname']}
             ${lan_data['current_speed']}:${local_player_position['speed']}
             ${lan_data['current_tip']}:${config['tip_for_player_sound'] ? lan_data['on'] : lan_data['off']}
+            ${lan_data['current_map_tip']}:${tiped ? lan_data['on'] : lan_data['off']}
             ${lan_data['club']}:${config['club']}
             ${lan_data['union']}:${config['union']}`
 
